--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.121.0",
+    "archiver": "^5.3.1",
     "jszip": "^3.10.0"
   }
 }
