--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.121.0",
     "archiver": "^5.3.1",
+    "date-fns": "^2.28.0",
     "jszip": "^3.10.0"
   }
 }
